--- a/src/app.postcss
+++ b/src/app.postcss
@@ -31,7 +31,7 @@
       @apply heading mb-2 text-lg md:mb-3 md:text-xl;
     }
     h3 {
-      @apply clear-both mb-1 mt-6 inline-block text-van_dyke-600;
+      @apply clear-both mb-1 mt-6 inline-block text-xs;
       text-transform: uppercase;
     }
     img {
@@ -40,7 +40,7 @@
     ul {
       @apply inline-block text-xs;
       li {
-        @apply before:link-color ml-0.5 inline pl-2 before:mr-0.5 before:content-['•'];
+        @apply before:link-color ml-[1/12rem] inline pl-2 before:mr-0.5 before:content-['•'];
       }
     }
   }
@@ -52,7 +52,7 @@
   }
 
   .text-color {
-    @apply text-eerie_black-500;
+    @apply text-eerie_black-600;
   }
 
   .heading-color {
