better responsive layout

--- a/src/app.postcss
+++ b/src/app.postcss
@@ -6,7 +6,7 @@
 
 @layer base {
   body {
-    @apply background-color text-color text-sm md:text-base;
+    @apply background-color text-color overflow-x-hidden text-sm md:text-base;
   }
 
   p {
