--- a/src/app.postcss
+++ b/src/app.postcss
@@ -31,6 +31,9 @@
       @apply heading mb-2 text-lg md:mb-3 md:text-xl;
     }
     h3 {
+      @apply heading -mb-2 mt-8;
+    }
+    h4 {
       @apply clear-both mb-1 mt-6 inline-block text-xs;
       text-transform: uppercase;
     }
